<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wowwee LISW</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_up">Arriba</string>
    <string name="button_left">Izquierda</string>
    <string name="button_right">Derecha</string>
    <string name="button_down">Abajo</string>
    
</resources>
